--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
+    "react-icons": "^4.3.1",
     "recoil": "^0.5.2",
     "styled-components": "^5.3.3"
   },
