--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
     "recoil": "^0.5.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
