--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.12",
     "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1"
