--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "axios": "^0.25.0",
     "framer-motion": "^5.6.0",
-    "next": "12.0.7",
+    "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^0.2.4",
     "typescript": "4.5.4"
   }
 }
