--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "axios": "^0.25.0",
+    "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
@@ -22,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.34.12",
     "recoil": "^0.5.2",
+    "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1"
   },
