--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/nanum-gothic": "^4.5.0",
     "axios": "^0.25.0",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
