--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.34.12",
     "recoil": "^0.5.2",
+    "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1"
   },
