--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@kfonts/nanum-gothic": "^0.1.3",
     "axios": "^0.25.0",
     "dotenv": "^14.3.0",
     "framer-motion": "^5.6.0",
