--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cinescoop-web",
   "private": true,
-  "scripts": {
+    "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/nanum-gothic": "^4.5.0",
     "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "framer-motion": "^5.6.0",
