--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
+    "firebase": "^9.6.6",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
     "react": "17.0.2",
