--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "firebase": "^9.6.6",
+    "firebaseui": "^6.0.0",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
     "react": "17.0.2",
