--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cinescoop-web",
   "private": true,
-    "scripts": {
+  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.10",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
+    "express": "^4.17.2",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -36,6 +37,7 @@
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "^0.2.4",
+    "nodemon": "^2.0.15",
     "typescript": "4.5.4"
   }
 }
