--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "cinescoop-web",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -37,7 +36,6 @@
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "^0.2.4",
-    "nodemon": "^2.0.15",
     "typescript": "4.5.4"
   }
 }
