--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cinescoop-web",
   "private": true,
   "scripts": {
-    "dev": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
+    "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
