🚚 Move server.js to root

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cinescoop-web",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
