--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/nanum-gothic": "^4.5.0",
     "axios": "^0.25.0",
-    "cheerio": "^1.0.0-rc.10",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "framer-motion": "^5.6.0",
     "next": "12.0.7",
     "nodemon": "^2.0.15",
+    "puppeteer": "^13.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.8",
+    "@types/puppeteer": "^5.4.4",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
