--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "framer-motion": "^5.6.0",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "nodemon": "^2.0.15",
     "puppeteer": "^13.3.2",
     "react": "17.0.2",
