--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.12",
+    "react-star-ratings": "^2.3.0",
     "recoil": "^0.5.2",
     "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-star-ratings": "^2.3.0",
     "@types/styled-components": "^5.1.20",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
