--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
+    "firebase": "^9.6.7",
+    "firebaseui": "^6.0.1",
     "framer-motion": "^5.6.0",
     "next": "^12.1.0",
     "nodemon": "^2.0.15",
