--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
     "react-icons": "^4.3.1",
+    "react-is": "^17.0.2",
     "react-query": "^3.34.12",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.5.2",
