➕ Chore: add yup for schema validation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/nanum-gothic": "^4.5.0",
+    "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
@@ -28,7 +29,8 @@
     "recoil": "^0.5.2",
     "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
-    "swiper": "^7.4.1"
+    "swiper": "^7.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
