--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/nanum-gothic": "^4.5.0",
     "@hookform/resolvers": "^2.8.8",
+    "animate.css": "^4.1.1",
     "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
@@ -32,9 +34,11 @@
     "react-query": "^3.34.12",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.5.2",
+    "request": "^2.88.2",
     "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1",
+    "url-parse": "^1.5.10",
     "yup": "^0.32.11"
   },
   "devDependencies": {
