--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
+    "compute-cosine-similarity": "^1.0.0",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
