--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebaseui": "^6.0.1",
     "framer-motion": "^5.6.0",
     "next": "^12.1.0",
+    "noto-sans-kr": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
