--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.3.1",
     "react-is": "^17.0.2",
     "react-query": "^3.34.12",
+    "react-router-dom": "^6.3.0",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.5.2",
     "request": "^2.88.2",
