--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "@hookform/resolvers": "^2.8.8",
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
-    "cheerio": "^1.0.0-rc.10",
     "compute-cosine-similarity": "^1.0.0",
     "dom7": "^4.0.4",
     "dotenv": "^14.3.0",
-    "express": "^4.17.2",
     "firebase": "^9.8.1",
     "firebaseui": "^6.0.1",
     "framer-motion": "^5.6.0",
@@ -34,11 +32,11 @@
     "react-router-dom": "^6.3.0",
     "react-star-ratings": "^2.3.0",
     "recoil": "^0.5.2",
-    "request": "^2.88.2",
     "ssr-window": "^4.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1",
     "url-parse": "^1.5.10",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
